--- a/project-1/css/main.css
+++ b/project-1/css/main.css
@@ -31,6 +31,17 @@ html
 }
 
 
+
+.cushioned
+{
+	margin: .1rem !important;
+}
+
+.max-width
+{
+	width: 100%;
+}
+
 .no-margin
 {
 	margin: 0 !important;
@@ -51,10 +62,6 @@ html
 	width: 500px;
 }
 
-.max-width
-{
-	width: 100%;
-}
 
 
 @media only screen and (max-width: 1024px)
